--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,7 @@ Institute of Molecular Cell Biology and Genetics.</license.copyrightOwners>
 		<dependency>
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2-roi</artifactId>
+			<version>0.4.8-SNAPSHOT</version>
 		</dependency>
 
 		<!-- SciJava dependencies -->
