WIP: Add enforcer skip to pom

--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,7 @@ Institute of Molecular Cell Biology and Genetics.</license.copyrightOwners>
 
 		<!-- NB: Deploy releases to the ImageJ Maven repository. -->
 		<releaseProfiles>deploy-to-imagej</releaseProfiles>
+		<enforcer.skip>true</enforcer.skip>
 	</properties>
 
 	<repositories>
