--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,7 @@ Institute of Molecular Cell Biology and Genetics.</license.copyrightOwners>
 		<dependency>
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2</artifactId>
+			<version>4.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imglib2</groupId>
